--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.9"
+    "@grpc/grpc-js": "^1.9.9",
+    "joi": "^17.11.0"
   }
 }
